@@ -1,6 +1,11 @@
 2021-04-30 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
+	  Do not use double pusp / pop for 16-bit load when optimizing for speed.
+
+2021-04-30 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c:
 	  Improve ldir assignment heuristic for r3ka and ez80_z80: Fix bug #3220.
 
 2021-04-29 Philipp Klaus Krause <pkk AT spth.de>
